fixing spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ form{
 	color: white;
 	height:	50px;
 }
-.stat-spot{
+.stat-spot p{
 	margin-bottom: 0px;
 }
 .spacingTool{
